--- a/ITC 362/Week 2/GeoQuiz/app/src/main/res/values/strings.xml
+++ b/ITC 362/Week 2/GeoQuiz/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">GeoQuiz</string>
     <string name="true_button">True</string>
     <string name="false_button">False</string>
+    <string name="question_australia">Canberra is the capital of Australia</string>
+    <string name="next_button">Next</string>
+    <string name="question_ocean">The Pacific Ocean is larger than the Atlantic Ocean.</string>
+    <string name="question_mideast">Te Suez canal connects the Red Sea and the Indian Ocean.</string>
+    <string name="question_Africa">The source of the Nile River is in Egypt.</string>
+    <string name="question_americas">The amazon River is the longest river in the Americas.</string>
+    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
 </resources>
