--- a/ITC 362/Week 2/GeoQuiz/app/src/main/res/values/strings.xml
+++ b/ITC 362/Week 2/GeoQuiz/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="question_Africa">The source of the Nile River is in Egypt.</string>
     <string name="question_americas">The amazon River is the longest river in the Americas.</string>
     <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
+    <string name="correct_toast">Correct</string>
+    <string name="incorrect_toast">Incorrect</string>
 </resources>
